--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".MainActivity">
-
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -31,6 +30,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.AppBarLayout>
+
         <TextView
             android:id="@+id/contextMenuTryText"
             android:layout_width="match_parent"
@@ -59,12 +59,26 @@
             android:layout_marginTop="20dp"
             />
         <SeekBar
+            android:id="@+id/simpleSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            style="@style/Widget.AppCompat.SeekBar"
-            android:max="5"
+            android:layout_marginHorizontal="40dp"
+            android:thumbTint="@color/PrimaryColor"
+            android:progressTint="@color/PrimaryColor"
+            />
+        <SeekBar
+            android:id="@+id/discreteSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="40dp"
+            android:thumbTint="@color/PrimaryColor"
+            android:progressTint="@color/PrimaryColor"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:max="6"
             android:progress="0"
+            android:text="@string/app_name"
             />
     </LinearLayout>
 </layout>
